# dynamic-traits

./: Cargo.toml  README.md
src/: consumer.rs  dynamic.rs  lib.rs  traits.rs
src/hal/: foreign.rs  gpio.rs  i2c.rs  mod.rs  steal.rs  uart.rs
