[package]
name = "dynamic-traits"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

embassy-time = { version = "0.4.0", features = ["std"] }
embassy-futures = { version = "0.1.1" }

# Dependencies for the 'std' main module
log = "0.4"
env_logger = "0.11"
static_cell = "2.1"
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-32768",
    "arch-std",
    "executor-thread",
    "log",
] }

# Dependencies for the 'hal' module
embassy-hal-internal = { git = "https://github.com/embassy-rs/embassy.git" }
critical-section = "1.2.0"
